some small fixes

--- a/src/poli_baselines/solvers/bayesian_optimization/lambo2/hydra_configs/generic_training.yaml
+++ b/src/poli_baselines/solvers/bayesian_optimization/lambo2/hydra_configs/generic_training.yaml
@@ -4,8 +4,10 @@ defaults:
   - trunk: sum_trunk
   # - branches: [protein_property, protein_generation, protein_constraint]
   - branches: [protein_property, protein_generation]
-  - generic_task: tasks/generic_task
-  - protein_seq: roots/protein_seq
+  - tasks:
+    # - generic_constraint
+    - generic_task
+    - protein_seq
   - guidance_objective: generic_task
   - optim: lambo_conservative
 
