--- a/src/poli_baselines/solvers/bayesian_optimization/lambo2/hydra_configs/tasks/generic_task.yaml
+++ b/src/poli_baselines/solvers/bayesian_optimization/lambo2/hydra_configs/tasks/generic_task.yaml
@@ -13,7 +13,7 @@ protein_property:
     data_module:
       _target_: cortex.data.data_module.TaskDataModule
       _recursive_: false
-      lengths: [1.0]
+      lengths: [1.0, 0.0]
       balance_train_partition:
         - recency
       batch_size: ${batch_size}
